--- a/preset_index.html
+++ b/preset_index.html
@@ -9,8 +9,7 @@
     html, body { height: 100%;}
 
     body {
-        
-        font-family: "Open Sans",sans-serif, Arial;
+		font-family: 'Lato', sans-serif, Arial;
         font-size: 13px;
         line-height: 1.42857;
         color: #767676;
@@ -51,7 +50,13 @@
     }
     img { border: none;}
     hr { border: 1px solid #ddd;  clear: both; width: 75%; margin: 10px auto; }
-    h1 { color: #000;}
+    h1
+	{
+		margin: 20px 20px 20px;
+		font-weight: normal;
+		color: #333333;
+		font-family: 'Lato', sans-serif, Arial;
+	}
 
 </style>
 </head>
